tests/dataset/tpc-ds/compiler/c/q32.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static double _avg_float(list_float v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int cs_item_sk;
  int cs_sold_date_sk;
  double cs_ext_discount_amt;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  int i_manufact_id;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static double test_TPCDS_Q32_simplified_result;
static void test_TPCDS_Q32_simplified() {
  if (!(test_TPCDS_Q32_simplified_result == 20.0)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){
          .cs_item_sk = 1, .cs_sold_date_sk = 1, .cs_ext_discount_amt = 5.0},
      (catalog_sale_t){
          .cs_item_sk = 1, .cs_sold_date_sk = 2, .cs_ext_discount_amt = 10.0},
      (catalog_sale_t){
          .cs_item_sk = 1, .cs_sold_date_sk = 3, .cs_ext_discount_amt = 20.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  item_t item[] = {(item_t){.i_item_sk = 1, .i_manufact_id = 1}};
  int item_len = sizeof(item) / sizeof(item[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_year = 2000},
                           (date_dim_t){.d_date_sk = 2, .d_year = 2000},
                           (date_dim_t){.d_date_sk = 3, .d_year = 2000}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  list_float tmp1 =
      list_float_create(catalog_sales.len * item.len * date_dim.len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < catalog_sales_len; tmp3++) {
    catalog_sale_t cs = catalog_sales[tmp3];
    for (int tmp4 = 0; tmp4 < item_len; tmp4++) {
      item_t i = item[tmp4];
      if (!(cs.cs_item_sk == i.i_item_sk)) {
        continue;
      }
      for (int tmp5 = 0; tmp5 < date_dim_len; tmp5++) {
        date_dim_t d = date_dim[tmp5];
        if (!(cs.cs_sold_date_sk == d.d_date_sk)) {
          continue;
        }
        if (!(i.i_manufact_id == 1 && d.d_year == 2000)) {
          continue;
        }
        tmp1.data[tmp2] = cs.cs_ext_discount_amt;
        tmp2++;
      }
    }
  }
  tmp1.len = tmp2;
  list_float filtered = tmp1;
  double avg_discount = _avg_float(filtered);
  list_float tmp6 = list_float_create(filtered.len);
  int tmp7 = 0;
  for (int tmp8 = 0; tmp8 < filtered.len; tmp8++) {
    double x = filtered.data[tmp8];
    if (!(x > avg_discount * 1.3)) {
      continue;
    }
    tmp6.data[tmp7] = x;
    tmp7++;
  }
  tmp6.len = tmp7;
  double result = _sum_float(tmp6);
  _json_float(result);
  test_TPCDS_Q32_simplified_result = result;
  test_TPCDS_Q32_simplified();
  free(tmp6.data);
  return 0;
}
